Last 1st page change

--- a/index.html
+++ b/index.html
@@ -8,45 +8,36 @@ title_separator: "|"
     <h2>The 32<sup style="text-transform:lowercase;">nd</sup> IEEE Conference on Virtual Reality and 3D User Interfaces </h2> 
     
     <p>
-        Ten years after the 2015 edition in Arles, located in the south of France, the conference is now exploring the west of France by landing in the historic city of Saint-Malo, in Brittany.        
+        The IEEE VR 2025 conference is over, and we were delighted to welcome you to Saint-Malo for this extraordinary week of scientific research in virtual, augmented and mixed reality!    
     </p> 
     <p>
-        This exciting new edition of IEEE VR will be hosted at the Palais du Grand Large. This beachside congress center is designed to accommodate large-scale events like the IEEE VR conference.
+        IEEE VR 2025 brought together nearly 1200 participants from 44 different countries. The scientific program was particularly rich and dense, with more than 200 scientific papers presented, 160 posters, 40 research demonstrations, 11 3DUI contest entries, 17 XR art pieces, and 14 exhibits! In all, over 600 publications associated with the IEEE VR 2025 conference are referenced in the IEEE Digital Library.<br>
+		IEEE VR proceedings: <a target="_blank" href="https://ieeexplore.ieee.org/xpl/conhome/10937339/proceeding">https://ieeexplore.ieee.org/xpl/conhome/10937339/proceeding</a> <br>
+		IEEE VRW proceedings: <a target="_blank" href="https://ieeexplore.ieee.org/xpl/conhome/10972355/proceeding">https://ieeexplore.ieee.org/xpl/conhome/10972355/proceeding</a>
     </p>
 	<p>
-        Saint-Malo, a city known for its rich history of sea explorers and its openness to the world, perfectly embodies the spirit of the IEEE VR conference. It is a place that resonates deeply with our community as we continue to explore new scientific and technological challenges, with an open-minded approach.
+        This year, we wanted to highlight several themes for our community. First of all, Art, with the introduction of a new track dedicated to artistic creation: the XR Gallery. This track offers a unique venue for artists and students to showcase works that push the boundaries of traditional art forms, demonstrating how immersive technologies can transform and revisit artistic expressions. Second, as a forward-thinking community, we recognize the importance of addressing the pressing issues of our world today. This year, we placed a special emphasis on sustainability, reflecting our commitment to making a positive impact on the world. Various actions were proposed to highlight and tackle environmental challenges, ensuring that our conference not only advances research and technology but also promotes a more sustainable future. This included a focus on reducing the carbon footprint of our conference by using eco-friendly materials for food and consumables wherever possible, and organizing a dedicated panel on this issue, which presented the carbon footprint of our conference and launched a discussion on the future of our conference model. Finally, IEEE VR is also strongly committed to diversity, equity, inclusion, accessibility, and support programs, with the DEIA initiative involved from the very beginning of the organization. As an example and part of this commitment, specific grants have been made available to help with the conference costs. Additionally, the Student Volunteer (SV) program offered students the opportunity to participate actively in the conference. This year, the selection of SV has been particularly challenging for the SV chairs due to high demand, with over 250 submissions.
     </p>
 	<p>
-        Our IEEE VR community is renowned for its creativity and innovation. In line with this, we are thrilled to introduce a new track dedicated to artistic creation this year. This track will offer a unique venue for artists and students to showcase works that push the boundaries of traditional art forms, demonstrating how immersive technologies can transform and revisit artistic expressions. 
+        Last but not least, none of this would have been possible without the unfailing commitment of a great many people, starting with the many members of the conference committee, but also our 60 student volunteers, and of course the local staff who worked tirelessly to make this event a tremendous success. We would like to take this opportunity to thank all the colleagues who worked behind the scenes. Nothing would be possible without a close-knit team, driven by the common goal of delivering the best possible experience. Organizing such an event involves a colossal engagement on the part of researchers, engineers, students, support staff and our entire international community, with a very high level of personal investment, particularly in view of the ever-increasing number of submissions. We are very proud to have been part of this adventure, and honored by the trust placed in us by our collaborators. We are convinced that by sticking together, respecting our differences, leveraging our complementary skills and helping each other out, we can lift mountains and cross oceans! 
     </p>
 	<p>
-        Moreover, as a forward-thinking community, we recognize the importance of addressing the pressing issues of our world today. This year, we will place a special emphasis on sustainability, reflecting our commitment to making a positive impact on the world. Various initiatives and actions will be proposed to highlight and tackle environmental challenges, ensuring that our conference not only advances research and technology but also promotes a more sustainable future.
-    </p>
-	<p>
-        Join us in Saint-Malo for an unforgettable IEEE VR conference. Engage with leading experts, explore cutting-edge innovations, and be part of a vibrant community dedicated to shaping the future of immersive technologies. We look forward to seeing you there!
+        To live or relive a little of this wonderful experience, and remember this great moment of scientific sharing, insightful discussions and exchange, please enjoy this aftermovie video:
     </p>
 	
 	<div class="alignCenter">
 	<video alt="Saint-Malo, Brittany France" controls>
-	  <source src="{{ "/assets/videos/videoPromo.mp4" | relative_url }}" type="video/mp4">
+	  <source src="{{ "/assets/videos/videoPostConf.mp4" | relative_url }}" type="video/mp4">
 	  <source src="{{ "/assets/videos/videoPromo.ogg" | relative_url }}" type="video/ogg">
 	Your browser does not support the video tag.
 	</video>
 	</div>
 	
-    <h2>About the IEEE VR Conference</h2>
     <p>
-        The IEEE Conference on Virtual Reality and 3D User Interfaces (IEEE VR) is the premier international event for the presentation of research results in the broad areas of virtual, augmented, and mixed reality (VR/AR/MR). Since 1993, IEEE VR has presented groundbreaking research and accomplishments by virtual reality pioneers: scientists, engineers, designers, and artists, paving the way for the future. Soon, IEEE VR expanded its scope to also include augmented, mixed, and other forms of mediated reality. Similarly, the IEEE Symposium on 3D User Interfaces (3DUI), which started as a workshop at IEEE VR in 2004, has become the premier venue for 3D user interfaces and 3D interaction in virtual environments. In 2018, VR and 3DUI were merged into the IEEE Conference on Virtual Reality and 3D User Interfaces, with the short name IEEE VR. In 2020, VR was the first major IEEE conference to be held entirely online and in a virtual environment.
+        And see you next year in Daegu, Korea, for IEEE VR 2026!
     </p>
 	
-	<h2>About Saint-Malo, Brittany, France</h2>
-    <p>
-        Saint-Malo is a port city located in the Brittany region of northwestern France, about 2 to 3 hours from Paris. It enchants visitors with its rich history, captivating architecture, and picturesque landscapes. Enclosed within formidable granite walls, it was once a pirate stronghold (corsairs approved by the King of France) strongly fortified against Norman and English attacks. This fortified port city exudes an old-world charm, offering a glimpse into its maritime past. Wander through the narrow cobblestone streets of the intra-muros (walled city) and discover charming cafes, boutiques, and historic landmarks such as the imposing Saint-Malo Cathedral. Beyond the city walls, visitors can explore stunning beaches, including the renowned Plage du Sillon, or embark on a journey to the nearby Mont Saint-Michel, a UNESCO World Heritage Site. Whether strolling along the ramparts, indulging in fresh seafood, or simply soaking in the maritime ambiance, Saint-Malo offers a captivating blend of history, culture, and natural beauty that leaves a lasting impression on all who visit.
-    </p>
-	
-	
-    <div class="notice--info bold alignCenter">We are looking forward to welcoming you in France! <br><i>À bientôt à Saint-Malo !</i> (See you in Saint-Malo) </div>
-    <p>The General Chairs of IEEE VR2025 - Anatole Lécuyer, Anne-Hélène Olivier, Ferran Argelaguet</p>
+    <p>The General Chairs of IEEE VR 2025: Anatole Lécuyer, Anne-Hélène Olivier, Ferran Argelaguet</p>
     
 	<p>Contact: <a target="_blank" href="mailto:general2025@ieeevr.org">general2025@ieeevr.org</a>
 </div>
