Added link to video on 1st page

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@ title_separator: "|"
 	<video alt="Saint-Malo, Brittany France" controls>
 	  <source src="{{ "/assets/videos/videoPostConf.mp4" | relative_url }}" type="video/mp4">
 	  <source src="{{ "/assets/videos/videoPromo.ogg" | relative_url }}" type="video/ogg">
-	Your browser does not support the video tag.
+	Your browser does not support the video tag. Follow the following link to download the video: <a target="_blank" href="https://filesender.renater.fr/?s=download&token=b0778cb3-d972-4a96-a961-c326a7070ca2">https://filesender.renater.fr/?s=download&token=b0778cb3-d972-4a96-a961-c326a7070ca2</a>.
 	</video>
+	<p>If your browser does not support the video tag, the following link to download the video: <a target="_blank" href="https://filesender.renater.fr/?s=download&token=b0778cb3-d972-4a96-a961-c326a7070ca2">https://filesender.renater.fr/?s=download&token=b0778cb3-d972-4a96-a961-c326a7070ca2</a></p>
 	</div>
 	
     <p>
