--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@ title_separator: "|"
 	
 	<div class="alignCenter">
 	<video alt="Saint-Malo, Brittany France" controls>
-	  <source src="{{ "/assets/videos/videoPostConf.mp4" | relative_url }}" type="video/mp4">
+	  <source src="{{ "/assets/videos/videoIEEEVR25shortVersion.mp4" | relative_url }}" type="video/mp4">
 	  <source src="{{ "/assets/videos/videoPromo.ogg" | relative_url }}" type="video/ogg">
-	Your browser does not support the video tag. Follow the following <a target="_blank" href="https://filesender.renater.fr/?s=download&token=b0778cb3-d972-4a96-a961-c326a7070ca2">link</a> to download the video.
+	Your browser does not support the video tag.
 	</video>
-	<p><small>If your browser does not support the video tag, the following <a target="_blank" href="https://filesender.renater.fr/?s=download&token=b0778cb3-d972-4a96-a961-c326a7070ca2">link</a> to download the video.</small></p>
 	</div>
 	
     <p>
