Change on video front page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title_separator: "|"
     </p>
 	
 	<div class="alignCenter">
-	<video alt="Saint-Malo, Brittany France" controls>
+	<video controls preload="metadata" title="Saint-Malo, Brittany France">
 	  <source src="{{ "/assets/videos/videoIEEEVR25shortVersion.mp4" | relative_url }}" type="video/mp4">
 	  <source src="{{ "/assets/videos/videoIEEEVR25shortVersion.ogg" | relative_url }}" type="video/ogg">
 	Your browser does not support the video tag.
